--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,48 +1,25 @@
 server {
-    listen       80;
-    server_name  localhost;
 
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
-    location ^~/api/{
-        proxy_pass  http://172.17.12.196:8080;
-    }
-
+    listen 2060;
+    server_name _;
     location / {
-        root   /usr/share/nginx/html;
+        root /home/front/evidence_frontend/dist;
+        index index.html index.htm;
+    }
+    location /manager{
+        alias /home/front/evidence_manager/dist;
         index  index.html index.htm;
     }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    if ( $query_string ~* ".*[\;'\<\>].*" ){
+        return 404;
     }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
+    location /pay/{
+        proxy_pass  http://8.131.225.170:9999/evidence/;
+        add_header Access-Control-Allow-Origin *;
+    }
+    location ^~/api/{
+        proxy_pass  http://8.131.225.170:9999/;
+        add_header Access-Control-Allow-Origin *;
+    }
 }
 
